# portfolio

./: CNAME  Cargo.toml  docker-compose.yml  index.html  package.json  portfolio-1455eafecce20fd.js  themes.json  vite.config.ts
.github/workflows/: pages.yml  rust.yml
assets/: sw.js
data/: education.json  experience.json  skills.json
src/: lib.rs  main.rs
src/components/: History.svelte  Input.svelte
src/stores/: theme.ts
src/utils/: ascii.ts  commands.ts  tracking.ts
